fixed sponsor logo overlapping in mobile browsers

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -32,8 +32,8 @@
   flex-direction: row;
 }
 .sponsorImg {
-  margin: 0 15px 0 15px;
-  height: 45px;
+  margin: 0 18px 0 18px;
+  height: 35px;
 }
 .imageShadow {
   background-color: #E1E1E1;
